--- a/CorreiosRestful.API/Views/Home/Index.cshtml
+++ b/CorreiosRestful.API/Views/Home/Index.cshtml
@@ -2,7 +2,8 @@
     <div class="content-wrapper">
         <div class="float-left">
             <p class="site-title">
-                <a href="~/">ASP.NET Web API</a></p>
+                <a href="~/">ASP.NET Web API</a>
+            </p>
         </div>
     </div>
 </header>
@@ -13,6 +14,7 @@
                 <h1>Welcome to ASP.NET Web API!</h1>
                 <h2>Modify the code in this template to jump-start your ASP.NET Web API development.</h2>
             </hgroup>
+            <pre>@ViewBag.Conteudo</pre>
             <p>
                 ASP.NET Web API allows you to expose your applications, data and services to the
                 web directly over HTTP.
