--- a/CorreiosRestful.API/Views/Home/Index.cshtml
+++ b/CorreiosRestful.API/Views/Home/Index.cshtml
@@ -1,8 +1,11 @@
-﻿<header>
+﻿@{
+    ViewBag.Title = "Correios RESTful API";
+}
+<header>
     <div class="content-wrapper">
         <div class="float-left">
             <p class="site-title">
-                <a href="~/">ASP.NET Web API</a>
+                <a href="~/">Correios RESTful API</a>
             </p>
         </div>
     </div>
@@ -11,44 +14,22 @@
     <section class="featured">
         <div class="content-wrapper">
             <hgroup class="title">
-                <h1>Welcome to ASP.NET Web API!</h1>
-                <h2>Modify the code in this template to jump-start your ASP.NET Web API development.</h2>
+                <h1>Correios RESTful API,</h1>
+                <h2>API para desenvolvedores utilizarem em aplicações que precisem encontrar um endereço a partir do CEP informado.</h2>
             </hgroup>
-            <pre>@ViewBag.Conteudo</pre>
-            <p>
-                ASP.NET Web API allows you to expose your applications, data and services to the
-                web directly over HTTP.
-            </p>
-            <p>
-                To learn more about ASP.NET Web API visit
-                <a href="http://go.microsoft.com/fwlink/?LinkID=238195" title="ASP.NET Web API Website">http://asp.net/web-api</a>.
-                The page features <mark>videos, tutorials, and samples</mark> to help you get the most from ASP.NET Web API.
-                If you have any questions about ASP.NET Web API, visit
-                <a href="http://go.microsoft.com/fwlink/?LinkID=238196" title="ASP.NET Web API Forum">our forums</a>.
-            </p>
         </div>
     </section>
     <section class="content-wrapper main-content clear-fix">
-        <h3>We suggest the following steps:</h3>
         <ol class="round">
             <li class="one">
-                <h5>Getting Started</h5>
-                ASP.NET Web API is a framework that makes it easy to build HTTP services that reach
-                a broad range of clients, including browsers and mobile devices. ASP.NET Web API
-                is an ideal platform for building RESTful applications on the .NET Framework.
-                <a href="http://go.microsoft.com/fwlink/?LinkId=245160">Learn more…</a>
+                <h5>Acesse:</h5>
+                <a href="http://go.microsoft.com/fwlink/?LinkId=245160">http://correiosrestful.apphb.com/cep/76873274</a> E veja o resultado, agora é so usar!
             </li>
-
             <li class="two">
-                <h5>Add NuGet packages and jump-start your coding</h5>
-                NuGet makes it easy to install and update free libraries and tools.
-                <a href="http://go.microsoft.com/fwlink/?LinkId=245161">Learn more…</a>
+                <h5></h5>
             </li>
             <li class="three">
-                <h5>Find Web Hosting</h5>
-                You can easily find a web hosting company that offers the right mix of features
-                and price for your applications.
-                <a href="http://go.microsoft.com/fwlink/?LinkId=245164">Learn more…</a>
+                <h5></h5>
             </li>
         </ol>
     </section>
