--- a/CorreiosRestful.API/Views/Home/Index.cshtml
+++ b/CorreiosRestful.API/Views/Home/Index.cshtml
@@ -23,13 +23,14 @@
         <ol class="round">
             <li class="one">
                 <h5>Acesse:</h5>
-                <a href="http://go.microsoft.com/fwlink/?LinkId=245160">http://correiosrestful.apphb.com/cep/76873274</a> E veja o resultado, agora é so usar!
+                <a href="http://correiosapi.apphb.com/">http://correiosapi.apphb.com/</a> E veja o resultado, agora é so usar!
             </li>
             <li class="two">
-                <h5></h5>
+                <h5>Faça um fork do projeto no github e ajude a melhorar, isso foi só uma brincadeira na madrugada ainda tem muito o que melhorar!</h5>
             </li>
             <li class="three">
-                <h5></h5>
+                <h5>Exemplo de uso com jQuery</h5>
+                <pre></pre>
             </li>
         </ol>
     </section>
