--- a/CorreiosRestful.API/Views/Home/Index.cshtml
+++ b/CorreiosRestful.API/Views/Home/Index.cshtml
@@ -3,9 +3,10 @@
 }
 <header>
     <div class="content-wrapper">
+        <a class="float-right" href="http://twitter.com/emerson_soares" title="Emerson Soares">@@emerson_soares</a>
         <div class="float-left">
             <p class="site-title">
-                <a href="~/">Correios RESTful API</a>
+                <h1>Correios RESTful API</h1>
             </p>
         </div>
     </div>
@@ -14,7 +15,6 @@
     <section class="featured">
         <div class="content-wrapper">
             <hgroup class="title">
-                <h1>Correios RESTful API,</h1>
                 <h2>API para desenvolvedores utilizarem em aplicações que precisem encontrar um endereço a partir do CEP informado.</h2>
             </hgroup>
         </div>
@@ -23,14 +23,23 @@
         <ol class="round">
             <li class="one">
                 <h5>Acesse:</h5>
-                <a href="http://correiosapi.apphb.com/">http://correiosapi.apphb.com/</a> E veja o resultado, agora é so usar!
+                <a href="http://correiosapi.apphb.com/cep/76873274">http://correiosapi.apphb.com/cep/76873274</a> E veja um exemplo de resultado!
             </li>
             <li class="two">
-                <h5>Faça um fork do projeto no github e ajude a melhorar, isso foi só uma brincadeira na madrugada ainda tem muito o que melhorar!</h5>
+                <h5>Retornos:</h5>
+                <p>Em caso de sucesso:</p>
+                <script src="https://gist.github.com/3884501.js?file=retorno.js"></script>
+                <p>Em caso de erro:</p>
+                <script src="https://gist.github.com/3884501.js?file=retornoerro.js"></script>
             </li>
             <li class="three">
-                <h5>Exemplo de uso com jQuery</h5>
-                <pre></pre>
+                <h5>Exemplos:</h5>
+                <p>Jquery:</p>
+                <script src="https://gist.github.com/3884501.js?file=sample1.js"></script>
+            </li>
+            <li class="four">
+                <h5>Faça um <a href="https://github.com/emersonsoares/CorreiosRESTfulAPI" title="Ir para o código fonte do projeto">fork do projeto no github</a></h5>
+                <p>e ajude a melhorar o código, isso foi só uma brincadeira na madrugada!</p>
             </li>
         </ol>
     </section>
