Enable bundle otimizations

--- a/CorreiosRestful.API/Views/Home/Index.cshtml
+++ b/CorreiosRestful.API/Views/Home/Index.cshtml
@@ -1,7 +1,4 @@
-﻿@{
-    ViewBag.Title = "Correios RESTful API";
-}
-<header>
+﻿<header>
     <div class="content-wrapper">
         <a class="float-right" href="http://twitter.com/emerson_soares" title="Emerson Soares">@@emerson_soares</a>
         <div class="float-left">
