--- a/CorreiosRestful.API/Views/Shared/_Layout.cshtml
+++ b/CorreiosRestful.API/Views/Shared/_Layout.cshtml
@@ -1,9 +1,10 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
+    <title>@ViewBag.Title</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <title>@ViewBag.Title</title>
+    <meta name="descripion" content="API para desenvolvedores utilizarem em aplicações que precisem encontrar um endereço a partir do CEP informado. Dados direto, dos correios." />
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 </head>
