Descricao de erro alterada na home page

--- a/CorreiosRestful.API/Views/Home/Index.cshtml
+++ b/CorreiosRestful.API/Views/Home/Index.cshtml
@@ -26,8 +26,7 @@
                 <h5>Retornos:</h5>
                 <p>Em caso de sucesso:</p>
                 <script src="https://gist.github.com/3884501.js?file=retorno.js"></script>
-                <p>Em caso de erro:</p>
-                <script src="https://gist.github.com/3884501.js?file=retornoerro.js"></script>
+                <p>Em caso de erro de CEP não encontrado a API retornará o HTTP Status <a href="http://pt.wikipedia.org/wiki/HTTP_404" title="">404</a></p>
             </li>
             <li class="three">
                 <h5>Exemplos:</h5>
