--- a/AddressApi.RestApi/Views/Shared/_Layout.cshtml
+++ b/AddressApi.RestApi/Views/Shared/_Layout.cshtml
@@ -10,8 +10,8 @@
 </head>
 <body>
     @RenderBody()
-    <a href="https://github.com/emersonsoares/CorreiosRESTfulAPI">
-        <img style="position: absolute; top: 0; left: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_left_darkblue_121621.png" alt="Fork me on GitHub">
+    <a href="https://github.com/emersonsoares/AddressAPI">
+        <img style="position: fixed; top: 0; left: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_left_darkblue_121621.png" alt="Fork me on GitHub">
     </a>
 
     @Scripts.Render("~/bundles/jquery")
