--- a/AddressApi.RestApi/Views/Home/Index.cshtml
+++ b/AddressApi.RestApi/Views/Home/Index.cshtml
@@ -39,7 +39,7 @@
             </li>
         </ol>
     </section>
-    <div id="disqus_thread"></div>
+    <div id="disqus_thread" class="content-wrapper"></div>
     <script type="text/javascript">
         /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
         var disqus_shortname = 'correiosapi'; // required: replace example with your forum shortname
